<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">E-Commerce-Admin-Android</string>
    <string name="sing_in_to_account">Sing in to account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="empty_string" />
    <string name="auth_error_msg_empty_email">Please enter email</string>
    <string name="auth_error_msg_empty_password">Please enter password</string>
    <string name="auth_error_msg_empty_first_name">Please enter first name</string>
    <string name="icon_password_visible">Password Visible</string>
    <string name="icon_password_hidden">Password Hidden</string>
    <string name="add_new_product">Add new product</string>
    <string name="my_products">My products</string>
    <string name="address">Address</string>
    <string name="payment">Payment</string>
    <string name="notification">Notification</string>
    <string name="security">Security</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="help_center">Help Center</string>
    <string name="log_out">Log out</string>
    <string name="statistics">Statistics</string>
    <string name="deactivate">Deactivate</string>
    <string name="content_description_facebook">Sign in with Facebook</string>
    <string name="content_description_gmail">Sign in with Gmail</string>
    <string name="content_description_apple">Sign in with Apple</string>
    <string name="_continue">Continue</string>
    <string name="auth_error_msg_empty_last_name">Please enter last name</string>
    <string name="auth_error_msg_empty_login">Please enter login</string>
    <string name="auth_error_msg_empty_phone">Please enter phone number</string>
    <string name="auth_error_msg_empty_gender">Please enter gender</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="user_error_msg_empty_full_name">Please enter full name</string>
    <string name="user_error_msg_empty_nick_name">Please enter nickname</string>
    <string name="user_error_msg_empty_gender">Please enter gender</string>
    <string name="btn_continue">Continue</string>
    <string name="skip">Skip</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="fill_your_profile">Fill your profile</string>
    <string name="full_name">Full name</string>
    <string name="nickname">Nickname</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_all_fields">Pls enter all fields</string>
    <string name="product_specifications">Specifications</string>
    <string name="product_reviews">Reviews</string>
    <string name="product_questions">Questions</string>
    <string name="product_similar_goods">Similar Goods</string>
    <string name="see_all">See all</string>
    <string name="change_order_status">Change status</string>
    <string name="cancelled">Cancelled</string>
    <string name="ongoing_empty_list_message">You don’t have an ongoing orders at this time</string>
    <string name="completed_empty_list_message">You don’t have completed orders yet</string>
    <string name="cancelled_empty_list_message">There are no cancelled orders</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="shipped">shipped</string>
    <string name="not_shipped">not shipped</string>
    <string name="in_delivery">In delivery</string>
    <string name="activate">Activate</string>
    <string name="reviews">Reviews</string>
    <string name="btnClearFilter">Clear</string>
    <string name="btnApplyFilter">Apply</string>
</resources>