<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".content.register.RegisterFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvHeader"
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/create_your_account"
            tools:layout_editor_absoluteY="80dp" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginHorizontal="@dimen/dimen_10dp"
            android:layout_marginTop="48dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginHorizontal="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:drawableStart="@drawable/ic_password"
            android:drawableEnd="@drawable/ic_not_visible"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="229dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:buttonTint="@color/accent_carrot"
            android:text="@string/remember_me"
            android:textSize="@dimen/dimen_16sp" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/btnLong"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@xml/btn_color_state_list"
            android:enabled="false"
            android:text="@string/sign_in"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="382dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="@dimen/margin_separator_45"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/input_hint_color_light" />

            <TextView
                android:id="@+id/tvContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dimen_10dp"
                android:text="@string/or_continue_with"
                android:textSize="@dimen/dimen_18sp" />

            <View
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/input_hint_color_light" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_separator_58"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_8">

                <ImageView
                    android:layout_width="@dimen/dimen_44dp"
                    android:layout_height="@dimen/dimen_44dp"
                    android:padding="@dimen/dimen_7dp"
                    android:src="@drawable/ic_facebook" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:background="@drawable/shape_8">

                <ImageView
                    android:id="@+id/btnGoogle"
                    android:layout_width="@dimen/dimen_44dp"
                    android:layout_height="@dimen/dimen_44dp"
                    android:padding="@dimen/dimen_7dp"
                    android:src="@drawable/ic_google" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_8">

                <ImageView
                    android:id="@+id/btnApple"
                    android:layout_width="@dimen/dimen_44dp"
                    android:layout_height="@dimen/dimen_44dp"
                    android:padding="@dimen/dimen_7dp"
                    android:src="@drawable/ic_apple" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_44dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account"
                android:textColor="?attr/text_color"
                android:textSize="@dimen/dimen_18sp" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:text="@string/sign_in"
                android:textColor="@color/accent_carrot"
                android:textSize="@dimen/dimen_18sp" />

        </LinearLayout>

    </LinearLayout>
</layout>